--- a/src/geo.html
+++ b/src/geo.html
@@ -7,15 +7,15 @@
     <meta property="og:type" content="website" /> 
     <meta property="og:url" content="https://hseadc.github.io/umwelt/geo.html" /> 
     <meta property="og:title" content="Геологические изменения в природе" /> 
-    <meta property="og:description" content="В этом разделе Умвельт рассказывает о том, что значат изменения в геологии" /> 
+    <meta property="og:description" content="В этом разделе чаща рассказывает о том, что значат изменения в геологии" /> 
     <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
-    <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
      
     <!-- Twitter --> 
     <meta property="twitter:card" content="summary_large_image" /> 
     <meta property="twitter:url" content="https://hseadc.github.io/umwelt/geo.html" /> 
     <meta property="twitter:title" content="Геологические изменения в природе" /> 
-    <meta property="twitter:description" content="В этом разделе Умвельт рассказывает о том, что значат изменения в геологии" /> 
+    <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в геологии" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
     <title>geo</title>
 </head>
