--- a/src/index.html
+++ b/src/index.html
@@ -5,26 +5,26 @@
     <meta charset="utf-8" />
     <!-- Primary Meta Tags --> 
 <title>ЧАЩА </title> 
-<meta name="title" content="Умвельт. Медиа о природных знаках " /> 
+<meta name="title" content="Чаща. Медиа о природных знаках " /> 
 <meta name="description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
  
 <!-- Open Graph / Facebook --> 
 <meta property="og:type" content="website" /> 
 <meta property="og:url" content="https://hseadc.github.io/umwelt/" /> 
-<meta property="og:title" content="Умвельт. Медиа о природных знаках " /> 
-<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
+<meta property="og:title" content="Чаща. Медиа о природных знаках " /> 
+<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа чаща собирает и интерпретирует эти природные сигналы." /> 
 <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
 
  
 <!-- Twitter --> 
 <meta property="twitter:card" content="summary_large_image" /> 
 <meta property="twitter:url" content="https://hseadc.github.io/umwelt/" /> 
-<meta property="twitter:title" content="Умвельт. Медиа о природных знаках " /> 
-<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
+<meta property="twitter:title" content="Чаща. Медиа о природных знаках " /> 
+<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа чаща собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
 
   <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
-  <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
   </head>
 
   <header>
@@ -46,6 +46,7 @@
 <p><a href="styleguide.html">Стайл-гайд</a></p>  -->
 
 <div class="main_screen">
+   
   <div class="menu">
     <ul>
       <li><a href="index.html">Главная</a></li> 
@@ -53,7 +54,7 @@
       <li><a href="map.html">Карта</a></li>
       <li><a href="literature.html">Литература</a></li> 
       <li>
-        <p>Разделы</p>
+        <p>Разделы</p> 
         <ul>
           <li><a href="color.html">Цвет</a></li> 
           <li><a href="feno.html">Фенология</a></li> 
@@ -65,13 +66,11 @@
       </li>
       <li><a href="styleguide.html">Стайл-гайд</a></li> 
     </ul>
-    <form>
-      <input type=""  placeholder="Что Вы хотите узнать?">
-      <button id="my-form-button" src="images/index/finder.png" ></button>
-      <p id="my-form-status"></p>
-    </form>
+    <form> 
+      <input type="text"  placeholder="Что Вы хотите узнать?">
+    </form> 
   </div>
-  
+    
   
   <div class="table">
     <div class="div1"><p>Звук</p></div>
@@ -117,13 +116,24 @@
 
 
 <form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
-  <p id="form_text">Вы можете оставить почту,<br>
-    чтобы первыми узнать о запуске сайта</p>
+  <p id="form_text">Присоединяйся к чаще!</p>
 
   <input class="email" type="email" name="email" placeholder="Почта"/>
   <button id="my-form-button">Отправить</button>
   <p id="my-form-status"></p>
 </form>
+
+<footer>
+  <div class="names">
+    <a href="https://t.me/kaddelina">@kaddelina</a>
+    <a href="https://t.me/kudryashhhh">@kudryashhhh</a>
+  </div>
+  <div class="socials"> 
+    <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="images/index/tg.webp" alt=""></a>
+    <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="images/index/vk.webp" alt=""></a>
+    <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="images/index/dzen.webp" alt=""></a>
+  </div>  
+</footer> 
 
 <script>
   var form = document.getElementById("my-form");
@@ -133,7 +143,7 @@
     var status = document.getElementById("my-form-status");
     var data = new FormData(event.target);
     fetch(event.target.action, {
-      method: form.method,
+      method: form.method,  
       body: data,
       headers: {
           'Accept': 'application/json'
@@ -150,21 +160,13 @@
             status.innerHTML = "Форма пуста"
           }
         })
-      }
+      } 
     }).catch(error => {
       status.innerHTML = "Форма пуста"
-    });
-  }
+    });  
+  } 
   form.addEventListener("submit", handleSubmit)
 </script> 
-
-<!-- <h1>Разделы статей</h1>
-<p><a href="color.html">Знаки изменения цвета</a></p>
-<p><a href="feno.html">Фенологические знаки</a></p>
-<p><a href="geo.html">Геологические знаки</a></p>
-<p><a href="habitat.html">Знаки поведения</a></p>
-<p><a href="sound.html">Звуковые знаки</a></p>
-<p><a href="structure.html">Знаки изменения строения</a></p> -->
 
   </body>
 </html>
