--- a/src/map.html
+++ b/src/map.html
@@ -6,20 +6,20 @@
 
     <meta property="og:type" content="website" /> 
     <meta property="og:url" content="https://hseadc.github.io/umwelt/map.html" /> 
-    <meta property="og:title" content="Карта от Умвельта" /> 
+    <meta property="og:title" content="Карта от чаща" /> 
     <meta property="og:description" content="В этом разделе есть карта, с помощью которой можно узнать о природных изменениях по всему свету" /> 
     <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
      
     <!-- Twitter --> 
     <meta property="twitter:card" content="summary_large_image" /> 
     <meta property="twitter:url" content="https://hseadc.github.io/umwelt/map.html" /> 
-    <meta property="twitter:title" content="Карта от Умвельта" /> 
+    <meta property="twitter:title" content="Карта от чаща" /> 
     <meta property="twitter:description" content="В этом разделе есть карта, с помощью которой можно узнать о природных изменениях по всему свету" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
-    <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <title><map name=""></map></title>
 </head>
-<body>
+<body class="map">
     <p><a href="./index.html">Главная</a></p>
     <p><a href="./about.html">О нас</a></p>
     <p><a href="./literature.html">Литература</a></p>
@@ -29,6 +29,6 @@
         <input type=""  placeholder="Что Вы хотите узнать?">
         <button id="my-form-button" src="images/main/poisk.svg" ></button>
         <p id="my-form-status"></p>
-      </form>
+      </form> 
 </body>
 </html>
