--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -6,17 +6,17 @@
 
     <meta property="og:type" content="website" /> 
     <meta property="og:url" content="https://hseadc.github.io/umwelt/styleguide.html" /> 
-    <meta property="og:title" content="Стайл-гайд Умвельта" /> 
-    <meta property="og:description" content="В этом разделе Умвельт рассказывает своём стиле" /> 
+    <meta property="og:title" content="Стайл-гайд чаща" /> 
+    <meta property="og:description" content="В этом разделе чаща рассказывает своём стиле" /> 
     <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
      
     <!-- Twitter --> 
     <meta property="twitter:card" content="summary_large_image" /> 
     <meta property="twitter:url" content="https://hseadc.github.io/umwelt/literature.html" /> 
-    <meta property="twitter:title" content="Стайл-гайд Умвельтаа" /> 
-    <meta property="twitter:description" content="В этом разделе Умвельт рассказывает своём стиле" /> 
+    <meta property="twitter:title" content="Стайл-гайд чаща" /> 
+    <meta property="twitter:description" content="В этом разделе чаща рассказывает своём стиле" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
-    <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <title>literature</title>
 </head>
 <body>
